Fixed toolbar icon spacing for home screen

--- a/apps/firefly/mobile/src/app/pages/home/home.page.scss
+++ b/apps/firefly/mobile/src/app/pages/home/home.page.scss
@@ -43,7 +43,7 @@ $app-card-height: 48px;
 
     ion-footer {
         ion-toolbar {
-            padding-bottom: 0.5rem;
+            padding-bottom: 1.375rem;
         }
     }
 }
